# RV32IC-ISS

./: CMakeLists.txt  README.md  main  main.cpp  test.txt
include/: disassembler.h  disassembler.hpp  memory.hpp  registerfile.hpp  riss.h  riss.hpp
lib/: disassembler.cpp  memory.cpp  registerfile.cpp
testCases-I/: t1  t1.c  t1.s
